# music_core

./: .env.example  .gitignore  README.md  docker-compose.yml  music_core_documentation.md
backend/: .env.example  Dockerfile  README.md  fetch_deezer_metadata.py  nigerian_artists.csv  pyproject.toml  requirements.txt  seed.py  seed_rec.py
backend/app/: cache.py  db.py  main.py
backend/app/models/: artist.py  listening_event.py  recommendation.py  song.py  user.py  user_feedback.py
backend/app/routers/: explain.py  feedback.py  recommendations.py  songs.py
backend/app/schemas/: __init__.py  explain.py  feedback.py  recommendations.py  songs.py
frontend/: README.md  index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: BottomNav.tsx  ExplanationDrawer.tsx  MiniPlayer.tsx
frontend/src/data/: index.ts
frontend/src/pages/: Home.tsx  Insights.tsx  Landing.tsx  Onboarding.tsx
frontend/src/types/: index.ts
frontend/src/utils/: AppContext.tsx
ml/: .env.example  .gitignore  Dockerfile  pyproject.toml  ruff.toml
ml/app/: cold_start.py  db.py  explainer.py  main.py  recommender.py
ml/app/models/: schemas.py
ml/app/routers/: recommend.py
ml/app/services/: model_service.py
ml/data/processed/: combined_interactions.csv
ml/data/seeds/: nigerian_songs.csv
ml/notebooks/: music_core_dataset_colab.ipynb
ml/tests/: test_recommender.py
